Proje dosyası ekle.

--- a/Views/Home/Anasayfa.cshtml
+++ b/Views/Home/Anasayfa.cshtml
@@ -5,5 +5,7 @@
 }
 <h1>Okulumuz</h1>
 
-<p>15 Temmuz Şehitleri Anadolu İmamhatip Lisesi dünyanın en boktan lisesidir.</p>
+<p>
+    15 Temmuz Şehitleri Anadolu İmam Hatip Lisesi, öğrencilerine akademik ve manevi gelişimi birlikte sunmayı amaçlayan bir eğitim kurumudur.<br /> Okulda modern sınıflar, kütüphane, fen ve bilgisayar laboratuvarları gibi çeşitli eğitim olanakları bulunmaktadır.<br /> Öğrencilerin sosyal ve kültürel gelişimlerini desteklemek amacıyla bilim olimpiyatları, münazara, şiir dinletileri, spor turnuvaları ve mesleki seminerler gibi düzenli etkinlikler gerçekleştirilir.<br /> Okul bünyesinde alanında uzman, deneyimli öğretmenlerden oluşan bir eğitim kadrosu görev yapmaktadır.<br /> Ayrıca hafızlık programı, Arapça eğitimi ve uluslararası proje çalışmaları gibi çeşitli programlarla öğrencilere çok yönlü bir eğitim sunulmaktadır.
+</p>
 
