--- a/Views/Home/Hakkımızda.cshtml
+++ b/Views/Home/Hakkımızda.cshtml
@@ -6,4 +6,4 @@
 
 <h1>Hakkımızda</h1>
 
-<p>Merhaba ben behlül 16 yaşındayım ve forklift ehliyetim var let's gooo...'</p>
+<p>Merhaba ben Behlül Erol, 16 yaşında, 3d Tasarım ile ilgilenen bir 10.sınıf öğrencisiyim.<br /> İnşALLAH yüz alacağız.</p>
